# bvault-js

./: .prettierignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.changeset/: all-grapes-shake.md  busy-walls-swim.md  mean-ravens-cry.md  petite-falcons-throw.md  ripe-dots-bet.md  tasty-apples-drum.md  three-roses-lay.md  warm-webs-read.md
.github/workflows/: publish.yml  release.yml
bvault_js_rs/: Cargo.toml  LICENSE_MIT
bvault_js_rs/src/: lib.rs
src/: index.ts
src/lib/: bvault-db.ts  converters.ts  crypto.ts  errors.ts  local-storage.ts
src/pkg/: bvault_js_rs.d.ts  bvault_js_rs.js  bvault_js_rs_bg.wasm  bvault_js_rs_bg.wasm.d.ts
test/: crypto.test.js  crypto.test.ts  setup.js  setup.ts
