[package]
name = "bvault_js_rs"
version = "0.1.0"
authors = ["Aaron Will Djaba <papiliocurtis@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when focusing on wasm for now.
wee_alloc = { version = "0.4.5", optional = true }
aes = "0.8.4"
cbc = "0.1.2"
pbkdf2 = "0.12.2"
sha2 = "0.10.9"
base64 = "0.22.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for a small code size.
opt-level = "s"
